--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ a:active,a:hover{
 .video-container {
     position: relative;
     width: 100%;
-    height:2000px;
+    height:1700px;
     overflow: hidden;
    
     
@@ -84,7 +84,7 @@ a:active,a:hover{
   }
  .about{
     position:absolute;
-    top:105vh;
+    top:120vh;
     font-size: 50px;
     color: white;
     padding: 80px;
@@ -99,11 +99,13 @@ a:active,a:hover{
   
 .stills .header {
     text-align: center;
-  }
+}
   
   .stills .header h1{
+    font-size: 50px;
     color: white;
     margin: 20px;
+    margin-bottom: 40px;
   }
  .stills .row {
     display: flex;
@@ -122,15 +124,76 @@ a:active,a:hover{
     margin-top: 8px;
     vertical-align: middle;
   }
+
+
+  .container{
+    width: 100%;
+    height: 100vh;
+    background:black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    border-top: 2px solid rgb(79, 79, 118);
+  }
+  form{
+    background: white;
+    display: flex;
+    flex-direction: column;
+    padding: 2vw 4vw;
+    width: 90%;
+    border-radius: 10px;
+  }
+  form h3{
+    color: black;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+  form input,form textarea{
+    border: 0;
+    margin: 10px 0;
+    padding: 0;
+    outline: none;
+    background: white;
+    font-size: 16px;
+  }
+  form button{
+    padding: 15px;
+    background: rgb(40, 4, 4);
+    color: white;
+    font-size: 18px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    width: 150px;
+    margin: 20px auto 0;
+    border-radius: 30px;
+  }
+  form button:active,form button:hover{
+    background-color: red;
+  }
   
 
+  
+@media(max-width:1150px){
+    .about{
+       
+        top:100vh;
+        font-size: 45px;
+        
+    }
+
+}
 @media(max-width:952px){
     label.logo{
         
         padding-left: 50px;
     }
-    nav ul li a{
+    .about{
        
+        top:80vh;
+        font-size: 45px;
+        
     }
    
 }
@@ -143,7 +206,7 @@ a:active,a:hover{
         position: fixed;
         width: 100%;
         height: 100vh;
-        background:wheat;
+        background:black;
         
         top: 80px;
         left: -100%;
@@ -169,7 +232,29 @@ a:active,a:hover{
         flex: 50%;
         max-width: 50%;
       }
+    .about{
+       
+        top:80vh;
+        font-size: 40px;
+        padding: 35px;
+        
+    }
+    .video-container {
+        position: relative;
+        width: 100%;
+        height:1300px;
+        overflow: hidden;
+       
+        
+      }
     
+}
+@media(max-width:770px)
+{
+    .video-container {
+        
+        height:1500px;
+        }
 }
  @media (max-width: 600px) {
    .stills .column {
@@ -179,6 +264,46 @@ a:active,a:hover{
     label.logo{
         font-size: 25px;
     }
+    .video-container {
+        
+        height:1600px;
+        }
+    .about{
+       
+            top:60vh;
+            font-size: 40px;
+            padding: 35px;
+            
+        }
+}
+@media (max-width: 430px){
+    .about{
+       
+        top:40vh;
+        font-size: 25px;
+        padding: 35px;
+        
+    }
+    .video-container {
+        
+        height:1000px;
+        }
+}
+@media (max-width: 380px)
+{
+    .about{
+       
+        top:30vh;
+        font-size: 25px;
+        padding: 30px;
+        
+    } 
+    .video-container {
+        
+        height:1000px;
+        }
+}
+ 
     
    
-  }
+  
